--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Fledson Henrique - DoWhile 2021</title>
     <link rel="stylesheet" href="style.css" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
