--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
 </head>
 
 <body>
+    <header>
+        <img src="images/degradê2Total.svg" alt="degradê 2" class="degrade2">
+        <img src="images/degradê1Total.svg" alt="degradê 1" class="degrade1">
+    </header>
     <!-- Card Principal (Crachá) -->
+    <!-- <div class="detail">
+        <img src="images/faixa.svg" alt="">
+        <img src="images/quebra.svg" alt="">
+    </div> -->
     <main>
         <!-- Conteudo interno do crachá -->
         <div class="container">
             <!-- imagens -->
             <div class="avatar">
                 <span>
-            <img src="images/selo.svg" alt="Selo Rocketseat" />
-          </span>
-                <img id="userImage" src="https://lorempixel.com/185/185/people/" alt="Foto Pessoal" />
+                    <img src="images/selo.svg" alt="Selo Rocketseat" />
+                </span>
+                <img id="userImage" src="#" alt="Foto Pessoal" onmouseover="showQr()" onMouseOut="hideQr()" onclick="linkDoWhile()" />
             </div>
 
             <h1 id="userName">Fledson</h1>
-            <a id="userLink" href="#" target="_blank">
-                <img src="images/github 2.svg" alt="ícone github" />
+            <a id="userLink" href="# " target="_blank ">
+                <img src="images/github 2.svg " alt="ícone github " />
                 <span id="userLogin"> @fledson_henrique </span>
             </a>
 
@@ -35,30 +43,30 @@
 
             <ul id="socialLinks">
                 <li class="youtube">
-                    <a href="#" target="_blank">
-                        <img src="images/youtube.svg" alt="ícone YouTube" />
+                    <a href="# " target="_blank ">
+                        <img src="images/youtube.svg " alt="ícone YouTube " />
                     </a>
                 </li>
                 <li class="facebook">
-                    <a href="#" target="_blank">
-                        <img src="images/facebook.svg" alt="ícone Facebook" />
+                    <a href="# " target="_blank ">
+                        <img src="images/facebook.svg " alt="ícone Facebook " />
                     </a>
                 </li>
                 <li class="instagram">
-                    <a href="#" target="_blank">
-                        <img src="images/instagram.svg" alt="ícone Instagram" />
+                    <a href="# " target="_blank ">
+                        <img src="images/instagram.svg" alt="ícone Instagram " />
                     </a>
                 </li>
                 <li class="twitter">
-                    <a href="#" target="_blank">
-                        <img src="images/twitter.svg" alt="ícone Twitter" />
+                    <a href="# " target="_blank ">
+                        <img src="images/twitter.svg" alt="ícone Twitter " />
                     </a>
                 </li>
             </ul>
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="script.js "></script>
 </body>
 
 </html>
